# formulae

./: Cargo.toml  README.md
src/: bin.rs  tree.rs  utils.rs  workbook.rs
src/evaluate/: value.rs
src/function/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
