[package]
name = "formulae"
version = "0.1.0"
edition = "2024"
description = "Convert Excel workbooks into Rust logic."
readme = "README.md"
repository = "https://github.com/jackbackes/formulae.git"
keywords = ["excel", "xlsx", "emulator"]
categories = ["command-line-utilities", "parsing"] 
license-file = "LICENSE"

[lib]
name = "formulae_lib"
path = "src/lib.rs"

[[bin]]
name = "formulae"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.61"
chrono = "0.4.22"
clap = { version = "4.5.35", features = ["derive"] }
excel-emulator-macro = { version = "0.1.0", path = "excel-emulator-macro" }
ndarray = "0.16.1"
nom = "8.0.0"
petgraph = "0.8.1"
quick-xml = { version = "0.37.4", features = ["serde", "serialize", "encoding"] }
regex = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
thiserror = "2.0.12"
zip = "0.6.6"
libmath = "0.2.1"
indicatif = "0.17.1"
